Fix: Solid principles implementation in code base and api for creating users
